--- a/src/index.scss
+++ b/src/index.scss
@@ -47,22 +47,6 @@ hr[role="separator"] {
   margin: 1.5rem 1rem;
 }
 
-.nav {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  display: flex;
-  width: calc(100vw - 2rem);
-  min-height: 10rem;
-  justify-content: space-between;
-  padding: 0 1rem;
-  background: linear-gradient(
-      to bottom, 
-      rgba(0, 0, 0, .8) 0%, 
-      rgba(0, 0, 0, 0) 80%
-  );
-}
-
 .icon-button {
   padding: 0;
   border: 0;
@@ -90,34 +74,68 @@ hr[role="separator"] {
   height: 100%;
 }
 
-.nav__logo {
-  margin: 2.5rem 0 0;
-  color: var(--color-white);
-  font-size: 2rem;
-  font-weight: 400;
-  line-height: 2.5rem;
-}
-
-.nav__hamburger {
-  position: relative;
-  top: 2rem;
-  right: 1rem;
-  width: 25px;
-  height: 20px;
-}
-
-.nav__links {
+.nav {
   position: fixed;
+  z-index: 2;
   top: 0;
-  right: 0;
-  left: 0;
   display: flex;
-  width: 100vw;
-  height: calc(100vh - 4rem);
-  flex-direction: column;
-  padding: 4rem 0 2rem;
-  background-color: var(--color-darker-background);
-  transform: translateX(100vw);
+  width: calc(100vw - 2rem);
+  min-height: 10rem;
+  justify-content: space-between;
+  padding: 0 1rem;
+  background: linear-gradient(
+      to bottom, 
+      rgba(0, 0, 0, .8) 0%, 
+      rgba(0, 0, 0, 0) 80%
+  );
+
+  &__logo {
+    margin: 2.5rem 0 0;
+    color: var(--color-white);
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 2.5rem;
+  }
+
+  &__hamburger {
+    position: relative;
+    top: 2rem;
+    right: 1rem;
+    width: 25px;
+    height: 20px;
+  }
+
+  &__links {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    width: 100vw;
+    height: calc(100vh - 4rem);
+    flex-direction: column;
+    padding: 4rem 0 2rem;
+    background-color: var(--color-darker-background);
+    transform: translateX(100vw);
+  }
+
+  &__search {
+    width: 24px;
+    height: 24px;
+    margin-left: .5rem;
+  }
+
+  &__search-input {
+    width: 25vw;
+    border: 0;
+    border-bottom: 2px solid var(--color-white);
+    background-color: transparent;
+    border-radius: 0;
+    color: var(--color-white);
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+    transition: width .2s ease-in;
+  }
 }
 
 .nav__links li {
@@ -139,24 +157,6 @@ hr[role="separator"] {
 
 .nav__links li:last-child {
   order: -1;
-}
-
-.nav__search {
-  width: 24px;
-  height: 24px;
-  margin-left: .5rem;
-}
-
-.nav__search-input {
-  width: 25vw;
-  border: 0;
-  border-bottom: 2px solid var(--color-white);
-  background-color: transparent;
-  border-radius: 0;
-  color: var(--color-white);
-  font-family: 'Lato', sans-serif;
-  font-size: 1.5rem;
-  transition: width .2s ease-in;
 }
 
 .nav__search-input:focus {
@@ -573,19 +573,6 @@ main h2 {
       font-size: 18px;
   }
 
-  .thumb-button {
-    display: flex;
-    justify-content: center;
-  }
-
-  .thumb-image {
-    font-size: 1.2rem !important;
-  }
-
-  .thumb-text {
-    font-size: 1.2rem !important;
-  }
-
   .max-centered {
       position: relative;
       display: block;
@@ -607,29 +594,34 @@ main h2 {
 
   .nav {
       min-height: 22vh;
-  }
 
-  .nav__logo {
-      margin-top: 3rem;
-  }
+      &__logo {
+        margin-top: 3rem;
+      }
 
-  .nav__hamburger {
-      display: none;
-  }
+      &__links {
+        position: absolute;
+        top: 3rem;
+        right: 0;
+        left: auto;
+        width: 40vw;
+        height: auto;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        padding: 0;
+        background-color: transparent;
+        transform: translateX(0);
+    }
 
-  .nav__links {
-      position: absolute;
-      top: 3rem;
-      right: 0;
-      left: auto;
-      width: 40vw;
-      height: auto;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-end;
-      padding: 0;
-      background-color: transparent;
-      transform: translateX(0);
+    &__search {
+        width: 2rem;
+        height: 2rem;
+    }
+  
+    &__search-input {
+        display: none;
+    }
   }
 
   .nav__links li {
@@ -642,15 +634,6 @@ main h2 {
 
   .nav__links li:last-child {
       order: 0;
-  }
-
-  .nav__search {
-      width: 2rem;
-      height: 2rem;
-  }
-
-  .nav__search-input {
-      display: none;
   }
 
   .hero {
