--- a/src/index.scss
+++ b/src/index.scss
@@ -192,7 +192,7 @@ hr[role="separator"] {
     bottom: 0;
     display: flex;
     width: 100%;
-    height: 3rem;
+    height: 3.5rem;
     background-color: var(--color-light-background);
   }
 }
@@ -484,6 +484,10 @@ main h2 {
       
       &__background {
         @include herobackground(-6.5rem, 0, 110vw, auto);
+      }
+
+      &__closing-gauge {
+        height: 2.5rem;
       }
   }
 
