--- a/src/index.scss
+++ b/src/index.scss
@@ -197,60 +197,62 @@ hr[role="separator"] {
   }
 }
 
-.featured-card__glass-background {
-  position: absolute;
-  top: -20%;
-  left: -20%;
-  width: 140%;
-  height: 140%;
-  background:
-      center no-repeat linear-gradient(
-          var(--color-dark-background),
-          var(--color-dark-background)
-      ),
-      -25vw 0/160vw no-repeat url('./assets/img/pope-francis.png');
-  filter: blur(1rem);
-}
+.featured-card {
+  &__glass-background {
+    position: absolute;
+    top: -20%;
+    left: -20%;
+    width: 140%;
+    height: 140%;
+    background:
+        center no-repeat linear-gradient(
+            var(--color-dark-background),
+            var(--color-dark-background)
+        ),
+        -25vw 0/160vw no-repeat url('./assets/img/pope-francis.png');
+    filter: blur(1rem);
+  }
 
-.featured-card__content {
-  position: relative;
-  padding: 1rem;
-  color: var(--color-white);
-}
+  &__content {
+    position: relative;
+    padding: 1rem;
+    color: var(--color-white);
+  }
 
-.featured-card__hairline {
-  margin: 0;
-  font-weight: 300;
-  white-space: nowrap;
-}
+  &__hairline {
+    margin: 0;
+    font-weight: 300;
+    white-space: nowrap;
+  }
 
-.featured-card__title {
-  margin: 0;
-  font-size: 3rem;
-  font-weight: 400;
-  line-height: 1;
-}
+  &__title {
+    margin: 0;
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 1;
+  }
 
-.featured-card__desc {
-  display: -webkit-box;
-  overflow: hidden;
-  max-height: 10.5rem;
-  margin: 1rem 0;
-  -webkit-box-orient: vertical;
-  font-size: 0.9rem;
-  font-weight: 300;
-  -webkit-line-clamp: 6;
-  text-overflow: ellipsis;
-}
+  &__desc {
+    display: -webkit-box;
+    overflow: hidden;
+    max-height: 10.5rem;
+    margin: 1rem 0;
+    -webkit-box-orient: vertical;
+    font-size: 0.9rem;
+    font-weight: 300;
+    -webkit-line-clamp: 6;
+    text-overflow: ellipsis;
+  }
 
-.featured-card__cta {
-  font-weight: 700;
-}
+  &__cta {
+    font-weight: 700;
+  }
 
-.featured-card__buttons {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 -1rem -1rem;
+  &__buttons {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 -1rem -1rem;
+  }
 }
 
 .featured-card__buttons > .icon-button {
@@ -307,89 +309,6 @@ hr[role="separator"] {
   color: var(--color-dark-gray);
   font-size: 1.5rem;
   font-weight: 300;
-}
-
-.banner {
-  position: relative;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  margin: 1rem;
-  background-color: var(--color-light-gray);
-}
-
-.banner__background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  object-fit: cover;
-  opacity: .2;
-  pointer-events: none;
-}
-
-.banner-top .banner__left {
-  flex-basis: 40%;
-  padding-right: 1rem;
-}
-
-.banner-top .banner__left > .banner__hairline {
-  color: var(--color-dark-gray);
-  font-size: 1.25rem;
-  font-weight: 300;
-  letter-spacing: -.07rem;
-}
-
-.banner-top .banner__left > .banner__title {
-  display: block;
-  color: var(--color-dark-gray);
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: -.05rem;
-}
-
-.banner-top .banner__right {
-  flex-basis: 60%;
-}
-
-.banner-top .banner__text {
-  margin: 0;
-  color: var(--color-dark-gray);
-  font-size: 1.25rem;
-  font-weight: 300;
-  letter-spacing: -.05rem;
-}
-
-.banner-bottom {
-  flex-direction: column;
-  padding: 1rem 3rem;
-  margin-top: 2rem;
-}
-
-.banner-bottom .banner__heading {
-  position: relative;
-  margin: 0 0 1rem;
-  color: var(--color-dark-gray);
-  font-size: 2rem;
-  font-weight: 400;
-  text-align: center;
-}
-
-.banner-bottom .banner__right {
-  width: 100%;
-}
-
-.banner-bottom .banner__cta {
-  position: relative;
-  display: block;
-  width: 100%;
-  padding: 1rem 0;
-  border: 2px solid var(--color-darker-background);
-  background: transparent;
-  color: var(--color-darker-gray);
-  font-size: 1.5rem;
 }
 
 main[role="main"] {
@@ -456,22 +375,8 @@ main h2 {
   margin-right: .5rem;
 }
 
-.banner-top .icon-button {
-  display: none;
-}
-
 .max-centered {
   display: contents;
-}
-
-@media all and (min-width: 500px) {
-  .banner-top .banner__left {
-      flex-basis: 30%;
-  }
-
-  .banner-top .banner__right {
-      flex-basis: 70%;
-  }
 }
 
 @media all and (min-width: 768px) {
@@ -509,37 +414,6 @@ main h2 {
 
   .featured-card__buttons {
       margin: 0 -1.5rem -2rem;
-  }
-
-  .banner-top .banner__left {
-      flex-basis: 20%;
-  }
-
-  .banner-top .banner__right {
-      flex-basis: 80%;
-  }
-
-  .banner-bottom {
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 1rem 2rem;
-  }
-
-  .banner-bottom .banner__background {
-      top: -230%;
-  }
-
-  .banner-bottom .banner__right {
-      width: auto;
-  }
-
-  .banner-bottom .banner__heading {
-      margin-bottom: 0;
-      font-size: 1.5rem;
-  }
-
-  .banner-bottom .banner__cta {
-      width: 16rem;
   }
 
   .footer {
@@ -645,42 +519,42 @@ main h2 {
 
       &__background {
         @include herobackground(-2.5rem, 0, 100vw, auto);
-    }
+      }
+
+      &__featured-card {
+        left: 0;
+        width: 50%;
+        min-width: 600px;
+        max-height: unset;
+        margin-top: 2.5rem;
+      }
   }
 
-  .hero
-
-  .hero__featured-card {
-      left: 0;
-      width: 50%;
-      min-width: 600px;
-      max-height: unset;
-      margin-top: 2.5rem;
-  }
-
-  .featured-card__glass-background {
+  .featured-card {
+    &__glass-background {
       background:
           center no-repeat linear-gradient(var(--color-dark-background), var(--color-dark-background)),
           calc(-50vw + 650px) -6rem/105vw auto no-repeat url(./assets/img/pope-francis.png);
-  }
+    }
 
-  .featured-card__content {
+    &__content {
       padding: 2rem 1.5rem;
-  }
+    }
 
-  .featured-card__desc {
+    &__desc {
       max-width: 87%;
       margin: 2rem 0 1rem;
       font-size: 1.25rem;
-  }
+    }
 
-  .featured-card__cta {
+    &__cta {
       margin: 1rem 0 2rem;
       font-size: 1.5rem;
-  }
+    }
 
-  .featured-card__buttons {
+    &__buttons {
       margin: 0 -1.5rem -2rem;
+    }
   }
 
   .featured-card__buttons > .icon-button {
@@ -695,7 +569,7 @@ main h2 {
 
   .closing-gauge__left {
       padding-right: 1rem;
-  }
+  } 
 
   .closing-gauge__right {
       padding-left: 1rem;
@@ -713,25 +587,6 @@ main h2 {
   .closing-gauge__left:after {
       border-top-width: 0.33rem;
       border-bottom-width: 0.33rem;
-  } 
-
-  .banner-top .banner__text,
-  .banner-top .banner__left > .banner__hairline {
-      font-size: 1rem;
-  }
-
-  .banner-top .banner__left > .banner__title {
-      font-size: 1.5rem;
-      letter-spacing: 0;
-  }
-
-  .banner-top .icon-button {
-      display: block;
-      margin-left: 2rem;
-  }
-
-  .banner-bottom .banner__cta {
-      width: 20rem;
   }
 
   main h2 {
