--- a/src/index.scss
+++ b/src/index.scss
@@ -344,7 +344,8 @@ main h2 {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  margin: 0 1rem 3rem;
+  flex-direction: column;
+  margin: 2rem 1rem 3rem 0rem;
 }
 
 .footer__links li {
